--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -8,7 +8,7 @@
     </block>
   </view>
   <view class="login">
-    <button bindtap="tologin">登陆</button>
+    <button bindtap="toLogin">登陆</button>
   </view>
   <view>
     <button bindtap="toquestion">添加问题</button>
