--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -25,7 +25,7 @@
             <button style="margin:20rpx;float:left;width: 40%;" type="primary" formType="submit">
                 登陆
             </button>
-            <button style="margin:20rpx;float:right;width: 40%;" formType="reset">reset</button>
+            <button style="margin:20rpx;float:right;width: 40%;" formType="reset">注册</button>
         </view>
     </form>
     <mp-dialog class = "login_msg" title="登陆信息" show="{{is_show_dialog}}" bindbuttontap="{{login_state}}" buttons="{{buttons}}" >
