--- a/miniprogram/pages/question/question.wxml
+++ b/miniprogram/pages/question/question.wxml
@@ -27,5 +27,22 @@
             <button style="margin:20rpx;float:right;width: 40%;" formType="reset">reset</button>
         </view>
     </view>
-
+    <view>
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell">
+                <view class="weui-cell__bd">
+                    <input class="weui-input" placeholder="请输入文本" />
+                </view>
+            </view>
+        </view>
+        <view class="weui-cells__title">文本域</view>
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell">
+                <view class="weui-cell__bd">
+                    <textarea class="weui-textarea" placeholder="请输入文本" style="height: 3.3em" />
+                    <view class="weui-textarea-counter">0/200</view>
+                </view>
+            </view>
+        </view>
+    </view>
 </form>
